--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.WRTIE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.glass.permission.DEVELOPMENT" />
     
     <application
         android:allowBackup="true"
